[gd_scene load_steps=20 format=3 uid="uid://qcucmsij08w2"]

[ext_resource type="Script" uid="uid://dh6pe8l7565wp" path="res://scripts/policecar.gd" id="1_vuwf6"]
[ext_resource type="Texture2D" uid="uid://dl2ns838tx56" path="res://Assets/PoliceNewMaybe.png" id="2_i82ku"]
[ext_resource type="PackedScene" uid="uid://bby5wc0pqp8c2" path="res://Scene/health_componet.tscn" id="4_8u20h"]
[ext_resource type="PackedScene" uid="uid://chjgs0800dvnj" path="res://Scene/hitbox_component.tscn" id="5_bt22o"]
[ext_resource type="PackedScene" uid="uid://6qf3oufpmrkr" path="res://Scene/hurtbox_component.tscn" id="6_bt22o"]
[ext_resource type="Texture2D" uid="uid://vedqeqvorgg6" path="res://Assets/HeadlightTest.png" id="6_i82ku"]
[ext_resource type="PackedScene" uid="uid://dngelvv3b05al" path="res://Scene/healthbar.tscn" id="7_i82ku"]
[ext_resource type="AudioStream" uid="uid://dqwb0bnst6kj1" path="res://Assets/music/FIxedPoliceIthink.wav" id="8_gcwx3"]
[ext_resource type="Script" uid="uid://bc1mhxlju243q" path="res://scripts/police_lights.gd" id="9_xlosx"]
[ext_resource type="Texture2D" uid="uid://dbah0xqa256wt" path="res://Assets/LightCyrcle.jpg" id="10_g5ty1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgo5s"]
size = Vector2(28.1417, 25.9716)

[sub_resource type="Animation" id="Animation_hgo5s"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vuwf6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q56ot"]
resource_name = "left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_sm0xt"]
resource_name = "right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rodrp"]
_data = {
&"Idle": SubResource("Animation_hgo5s"),
&"RESET": SubResource("Animation_vuwf6"),
&"left": SubResource("Animation_q56ot"),
&"right": SubResource("Animation_sm0xt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8u20h"]
size = Vector2(119, 59)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bt22o"]
a = Vector2(0, -29)
b = Vector2(0, 29)

[sub_resource type="Environment" id="Environment_gcwx3"]

[node name="Police Car" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 5
script = ExtResource("1_vuwf6")
desired_distance = 100.0
steering_angle = 20
engine_power = 600

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(2, 2)
texture = ExtResource("2_i82ku")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -0.5)
scale = Vector2(3.12703, -2.1177)
shape = SubResource("RectangleShape2D_hgo5s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rodrp")
}

[node name="RayFrontLeft" type="RayCast2D" parent="."]
position = Vector2(48, -19)
target_position = Vector2(195, -119)

[node name="RayFrontMid" type="RayCast2D" parent="."]
position = Vector2(48, 0)
target_position = Vector2(318, -1)

[node name="RayFrontRight" type="RayCast2D" parent="."]
position = Vector2(48, 17)
target_position = Vector2(210, 104)

[node name="HealthComponet" parent="." instance=ExtResource("4_8u20h")]

[node name="hitbox_component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_bt22o")]
collision_layer = 3
collision_mask = 0
health_component = NodePath("../HealthComponet")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_component"]
position = Vector2(-1.5, -0.5)
shape = SubResource("RectangleShape2D_8u20h")

[node name="hurtbox_component" parent="." instance=ExtResource("6_bt22o")]
position = Vector2(61, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox_component"]
shape = SubResource("SegmentShape2D_bt22o")

[node name="Headlight" type="PointLight2D" parent="."]
position = Vector2(44, -17)
rotation = -1.57077
scale = Vector2(0.150534, 0.235329)
range_z_max = 1
shadow_enabled = true
texture = ExtResource("6_i82ku")

[node name="Headlight2" type="PointLight2D" parent="."]
position = Vector2(44, 19)
rotation = -1.58006
scale = Vector2(0.150534, 0.235329)
range_z_max = 1
shadow_enabled = true
texture = ExtResource("6_i82ku")

[node name="Healthbar" parent="." node_paths=PackedStringArray("HealthCheck") instance=ExtResource("7_i82ku")]
offset_left = -61.0
offset_top = -22.0
offset_right = 81.0
offset_bottom = 14.0
rotation = 1.56285
scale = Vector2(0.3, 0.3)
HealthCheck = NodePath("../HealthComponet")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gcwx3")
volume_db = -7.037
pitch_scale = 0.92
max_distance = 1529.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gcwx3")

[node name="PoliceLights" type="Node2D" parent="."]
script = ExtResource("9_xlosx")

[node name="RedLight" type="PointLight2D" parent="PoliceLights"]
position = Vector2(-22, 9)
scale = Vector2(0.479791, 0.538851)
color = Color(1, 0, 0.0431373, 1)
texture = ExtResource("10_g5ty1")

[node name="BlueLight" type="PointLight2D" parent="PoliceLights"]
position = Vector2(-21, -12)
scale = Vector2(0.539046, 0.57494)
color = Color(0, 0.414708, 0.992011, 1)
texture = ExtResource("10_g5ty1")
